--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">Heads Up WatchFace</string>
     <string name="message">Watch face tapped</string>
     <string name="my_analog_name">My Analog</string>
+    <string name="my_digital_name">Heads Up</string>
 </resources>
