settings: buttons for activity + some infrastructure experiments

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,4 +19,9 @@
     <string name="attachment_summary_on">Automatically download attachments for incoming emails
     </string>
     <string name="attachment_summary_off">Only download attachments when manually requested</string>
+
+    <!-- Settings Layout -->
+    <string name="settings_title">Watch face settings</string>
+    <string name="settings_button_complication_left">Left complication</string>
+    <string name="settings_button_complication_right">Right complication</string>
 </resources>
