--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,9 +3,10 @@
     <string name="message">Watch face tapped</string>
     <string name="my_analog_name">My Analog</string>
     <string name="my_digital_name">Heads Up</string>
-    <string name="title_activity_settings">SettingsActivity</string>
+    <string name="preferences_file_key">com.headsupwatchface.PREFERENCES_FILE_KEY</string>
 
     <!-- Preference Titles -->
+    <string name="title_activity_settings">SettingsActivity</string>
     <string name="messages_header">Messages</string>
     <string name="sync_header">Sync</string>
 
@@ -24,4 +25,5 @@
     <string name="settings_title">Watch face settings</string>
     <string name="settings_button_complication_left">Left complication</string>
     <string name="settings_button_complication_right">Right complication</string>
+    <string name="settings_12_hour_format_switch">12 Hour Format</string>
 </resources>
