location: first attempt on getting last known location

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -40,5 +40,6 @@
 
     <!-- Weather API call handling -->
     <string name="weather_invalid_api_key">Invalid weather API key</string>
-    <string name="weather_status_">Invalid weather API key</string>
+    <string name="weather_status">Invalid weather API key</string>
+    <string name="weather_units">metric</string>
 </resources>
